--- a/Quality of Barbell Lifts.Rmd
+++ b/Quality of Barbell Lifts.Rmd
@@ -5,19 +5,19 @@ date: "Friday, October 23, 2015"
 output: html_document
 ---
 
-## Executive Summary
+# Executive Summary
 
 
 A group of self-movement quantification enthusiasts were asked to perform barbell lifts 
 correctly and incorrectly in 5 different ways. The goal of this project is to find an algorithm that correclty predicts the manner in which they did the exercise. There are five possible outcomes: Class A corresponds to the specified execution of the exercise, while the other 4 classes correspond to common mistakes.
 
-I first tried an rpart tree but the accuracy of prediction value was only 56%. I then tried a random forest model and achieved 99.8% out of sample accuracy.The most important variables are num_window, roll_belt and pitch_belt.
+We first tried an rpart tree but the accuracy of prediction value was only 56%. We then tried a random forest model and achieved 99.8% out of sample accuracy.The most important variables are num_window, roll_belt and pitch_belt.
 
-I finally applied the random forest model to the 20 test cases and achieved 100% accuracy.
+We finally applied the random forest model to the 20 test cases and achieved 100% accuracy.
 
 
+# Exploratory Analysis and Data Preprocessing
 
-## Exploratory Analysis and Data Preprocessing
 We first load the data and libraries
 
 ```{r}
@@ -63,7 +63,7 @@ test2 <- test1[,-nzv]
 
 We have ended up with 54 variables (out of 160)
 
-## Cross Validation
+# Cross Validation
 
 We now partition the data by the "classe"" variable into training and test sets so that we can test for accuracy the model derived from the training set. We will use 75% of the data for the training set.
 
@@ -75,7 +75,7 @@ test3 <-training3[-inTrain, ]
 
 ```
 
-## Model building
+# Model building
 
 Given the large number of variables a tree based model would appear appropriate. Let's start with rpart
 
@@ -103,7 +103,7 @@ Imp
 
 The random forest produces much more satisfactory results with an error rate of 0.015% (99.85% accuracy). The three most important variables are in order of descending importance: num_window, roll_belt and pitch_belt
 
-## Apply model to 20 test cases:
+# Apply model to 20 test cases:
 
 ```{r}
 pred2 <-predict(tree1, test2)
